force-app/main/default/objects/phsUserGoalsStrategies__c/phsUserGoalsStrategies__c.object-meta.xml
<CustomObject>
    <label>phsUserGoalsStrategies</label>
    <nameField>
        <label>phsUserGoalsStrategies Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>phsUserGoalsStrategies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>