force-app/main/default/objects/phsUserGoalsStrategies__c/fields/GoalId__c.field-meta.xml
<CustomField>
    <fullName>GoalId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GoalId</label>
    <referenceTo>phsUserGoals__c</referenceTo>
    <relationshipLabel>phsUserGoalsStrategies</relationshipLabel>
    <relationshipName>phsUserGoalsStrategies</relationshipName>
    <type>Lookup</type>
</CustomField>