force-app/main/default/objects/phsUserGoalsStrategies__c/fields/StrategyDescription__c.field-meta.xml
<CustomField>
    <fullName>StrategyDescription__c</fullName>
    <label>StrategyDescription</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>