force-app/main/default/objects/phsUserGoalsStrategies__c/fields/StrategyType__c.field-meta.xml
<CustomField>
    <fullName>StrategyType__c</fullName>
    <label>StrategyType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>